# rle-bwt

./: CMakeLists.txt  bwt.cpp  bwt.h  main.cpp  rle.cpp  rle.h  task_completion_percentage.cpp  task_completion_percentage.h
tests/: CMakeLists.txt  tests.cpp
